--- a/src/styles.css
+++ b/src/styles.css
@@ -79,6 +79,39 @@ input:focus{
 .icon{
     margin-top:10px;
 }
+.result{
+    position:absolute;
+    z-index:1;
+    border: none;
+    border-radius:1rem;
+    padding:10rem 3rem;
+    background-color: white;
+    box-shadow: 7px 4px 10px grey;
+    left:35%;
+    right:35%;
+    top:25%;
+    bottom:28%;
+}
+#overlay::before{
+    content:"";
+    background-color: rgba(0, 0, 0,.7);
+    position:absolute;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+}
+
+.close-modal{
+  position:absolute;
+  top:10px;
+  right:10px;
+  padding:10px 13px;
+  font-size: 1.5rem;
+  border:none;
+  background-color: aqua;
+  border-radius:10px;
+}
 /* .display{
     visibility: ;
 } */
@@ -101,6 +134,7 @@ input:focus{
     .icon{
         margin-top:10px;
     }
+
 }
 @media (max-width:900px){
     .inputDiv{
