--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,10 @@
     font-family:sans-serif;
 }
 body{
-   background-color:skyblue;
+   /* background-color:#87ceeb; */
+   background-color: skyblue;
+   background-image: url("https://www.transparenttextures.com/patterns/az-subtle.png");
+
 }
 .app h1{
     text-align:center;
@@ -107,14 +110,13 @@ input:focus{
   top:10px;
   right:10px;
   padding:10px 13px;
-  font-size: 1.5rem;
+  font-size: 2rem;
   border:none;
-  background-color: aqua;
-  border-radius:10px;
+  background-color: transparent;
 }
-/* .display{
-    visibility: ;
-} */
+span{
+    /* color: red; */
+}
 @media (max-width: 1350px) {
     .inputDiv{
         display:flex;
