--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,7 @@ h2{
     border:0 solid grey;
     max-width:1300px;
     font-size:3rem;
-    line-height:5rem;
+    line-height:4.2rem;
     box-shadow:3px 3px 10px grey;
     border-radius:10px;
     background-color:#fff;
@@ -95,7 +95,7 @@ input:focus{
     top:25%;
     bottom:28%;
 }
-#overlay::before{
+.overlay::before{
     content:"";
     background-color: rgba(0, 0, 0,.7);
     position:absolute;
@@ -115,7 +115,16 @@ input:focus{
   background-color: transparent;
 }
 span{
-    /* color: red; */
+    margin:0 4px;
+    display: inline-block;
+}
+.correct{
+    background-color: #ccc6c6;
+    margin:4px 4px;
+    border-radius:4px;
+}
+.error{
+    color: red;
 }
 @media (max-width: 1350px) {
     .inputDiv{
