--- a/src/styles.css
+++ b/src/styles.css
@@ -35,6 +35,7 @@ h2{
     flex-direction:column;
 }
 .content{
+    user-select: none;
     border:0 solid grey;
     max-width:1300px;
     font-size:3rem;
