--- a/src/styles.css
+++ b/src/styles.css
@@ -93,8 +93,8 @@ input:focus{
     box-shadow: 7px 4px 10px grey;
     left:35%;
     right:35%;
-    top:25%;
-    bottom:28%;
+    top:20%;
+    bottom:25%;
 }
 .overlay::before{
     content:"";
@@ -111,9 +111,22 @@ input:focus{
   top:10px;
   right:10px;
   padding:10px 13px;
-  font-size: 2rem;
+  font-size: 3rem;
   border:none;
   background-color: transparent;
+}
+.inner-div p{
+    font-size: 3.5rem;
+    color:#fff;
+    display:flex;
+    justify-content: center;
+}
+.inner-div div{
+    background-color: rgb(115, 82, 232);
+    padding:2rem 0;
+    border-radius:10px;
+    margin-top: 1rem;
+    box-shadow: 2px 3px 5px 5px rgb(212, 210, 210);
 }
 span{
     margin:0 4px;
@@ -127,7 +140,10 @@ span{
 .error{
     color: red;
 }
-@media (max-width: 1350px) {
+.inner-div{
+
+}
+@media (max-width: 1700px) {
     .inputDiv{
         display:flex;
         margin:2rem;
@@ -145,6 +161,41 @@ span{
     }
     .icon{
         margin-top:10px;
+    }
+    .close-modal{
+        position:absolute;
+        top:10px;
+        right:10px;
+        padding:10px 13px;
+        font-size: 1rem;
+        border:none;
+        background-color: transparent;
+      }
+      .inner-div p{
+          font-size: 1rem;
+          color:#fff;
+          display:flex;
+          justify-content: center;
+      }
+      .inner-div div{
+          background-color: rgb(115, 82, 232);
+          padding:.5rem 0;
+          border-radius:10px;
+          margin-top: 1rem;
+          box-shadow: 2px 3px 5px 5px rgb(212, 210, 210);
+      }
+      .result{
+        position:absolute;
+        z-index:1;
+        border: none;
+        border-radius:1rem;
+        padding:10rem 3rem;
+        background-color: white;
+        box-shadow: 7px 4px 10px grey;
+        left:35%;
+        right:35%;
+        top:30%;
+        bottom:40%;
     }
 
 }
@@ -204,5 +255,41 @@ span{
         background:linear-gradient(to right, rgb(91, 32, 91),rgb(21, 0, 255));
         -webkit-background-clip: text;
         color:transparent;
+    }
+    /*---------------*/
+    .close-modal{
+        position:absolute;
+        top:10px;
+        right:10px;
+        padding:10px 13px;
+        font-size: 1rem;
+        border:none;
+        background-color: transparent;
+      }
+      .inner-div p{
+          font-size: 10px;
+          color:#fff;
+          display:flex;
+          justify-content: center;
+      }
+      .inner-div div{
+          background-color: rgb(115, 82, 232);
+          padding:.5rem 0;
+          border-radius:10px;
+          margin-top: 1rem;
+          box-shadow: 2px 3px 5px 5px rgb(212, 210, 210);
+      }
+      .result{
+        position:absolute;
+        z-index:1;
+        border: none;
+        border-radius:1rem;
+        padding:10rem 3rem;
+        background-color: white;
+        box-shadow: 7px 4px 10px grey;
+        left:35%;
+        right:35%;
+        top:30%;
+        bottom:40%;
     }
 }
