--- a/src/styles.css
+++ b/src/styles.css
@@ -83,6 +83,22 @@ input:focus{
 .icon{
     margin-top:10px;
 }
+@keyframes anim1{
+    0%{
+     transform:scale(0);
+    }
+    100%{
+     transform: scale(1);
+    }
+ }
+ @keyframes anim2{
+    0%{
+     transform:translatey(-200px);
+    }
+    100%{
+     transform: translatey(0%);
+    }
+ }
 .result{
     position:absolute;
     z-index:1;
@@ -93,8 +109,9 @@ input:focus{
     box-shadow: 7px 4px 10px grey;
     left:35%;
     right:35%;
-    top:25%;
-    bottom:28%;
+    top:20%;
+    bottom:25%;
+    animation: anim2 200ms ease-in 0ms 1 ; 
 }
 .overlay::before{
     content:"";
@@ -104,6 +121,7 @@ input:focus{
     left:0;
     right:0;
     bottom:0;
+    animation: anim1 200ms ease-in 0ms 1 ;
 }
 
 .close-modal{
@@ -111,9 +129,22 @@ input:focus{
   top:10px;
   right:10px;
   padding:10px 13px;
-  font-size: 2rem;
+  font-size: 3rem;
   border:none;
   background-color: transparent;
+}
+.inner-div p{
+    font-size: 3.5rem;
+    color:#fff;
+    display:flex;
+    justify-content: center;
+}
+.inner-div div{
+    background-color: rgb(115, 82, 232);
+    padding:2rem 0;
+    border-radius:10px;
+    margin-top: 1rem;
+    box-shadow: 2px 3px 5px 5px rgb(212, 210, 210);
 }
 span{
     margin:0 4px;
@@ -127,7 +158,18 @@ span{
 .error{
     color: red;
 }
-@media (max-width: 1350px) {
+@keyframes anim{
+   0%{
+    transform:scale(0);
+   }
+   100%{
+    transform: scale(1);
+   }
+}
+.visible{
+    display:none; 
+}
+@media (max-width: 1700px) {
     .inputDiv{
         display:flex;
         margin:2rem;
@@ -145,6 +187,41 @@ span{
     }
     .icon{
         margin-top:10px;
+    }
+    .close-modal{
+        position:absolute;
+        top:10px;
+        right:10px;
+        padding:10px 13px;
+        font-size: 1rem;
+        border:none;
+        background-color: transparent;
+      }
+      .inner-div p{
+          font-size: 1rem;
+          color:#fff;
+          display:flex;
+          justify-content: center;
+      }
+      .inner-div div{
+          background-color: rgb(115, 82, 232);
+          padding:.5rem 0;
+          border-radius:10px;
+          margin-top: 1rem;
+          box-shadow: 2px 3px 5px 5px rgb(212, 210, 210);
+      }
+      .result{
+        position:absolute;
+        z-index:1;
+        border: none;
+        border-radius:1rem;
+        padding:10rem 3rem;
+        background-color: white;
+        box-shadow: 7px 4px 10px grey;
+        left:35%;
+        right:35%;
+        top:30%;
+        bottom:40%;
     }
 
 }
@@ -205,4 +282,128 @@ span{
         -webkit-background-clip: text;
         color:transparent;
     }
+    /*---------------*/
+    .close-modal{
+        position:absolute;
+        top:10px;
+        right:10px;
+        padding:10px 13px;
+        font-size: 1rem;
+        border:none;
+        background-color: transparent;
+      }
+      .inner-div p{
+          font-size: 10px;
+          color:#fff;
+          display:flex;
+          justify-content: center;
+      }
+      .inner-div div{
+          background-color: rgb(115, 82, 232);
+          padding:.5rem 0;
+          border-radius:10px;
+          margin-top: 1rem;
+          box-shadow: 2px 3px 5px 5px rgb(212, 210, 210);
+      }
+      .result{
+        position:absolute;
+        z-index:1;
+        border: none;
+        border-radius:1rem;
+        padding:10rem 3rem;
+        background-color: white;
+        box-shadow: 7px 4px 10px grey;
+        left:35%;
+        right:35%;
+        top:30%;
+        bottom:40%;
+    }
+}
+@media (max-width:650px){
+    .result {
+        position: absolute;
+        z-index: 1;
+        border: none;
+        border-radius: 1rem;
+        padding: 6rem 3rem 3rem 3rem;
+        background-color: white;
+        box-shadow: 7px 4px 10px grey;
+        left: 23%;
+        right: 23%;
+        top: 20%;
+        bottom: 35%;
+    }
+     .inner-div div{
+        background-color: rgb(115, 82, 232);
+        padding:1rem 0;
+        border-radius:10px;
+        margin-top: 1rem;
+        box-shadow: 2px 3px 5px 5px rgb(212, 210, 210);
+    }
+    .inner-div p{
+        font-size: 1rem;
+    }
+    .inner-div {
+        padding: 0rem;
+        margin: auto -10%;
+    } 
+}
+@media (max-width:370px){
+    .inputDiv{
+        display:flex;
+        margin:3rem;
+        background-color:rgba(66, 64, 64, 0.4);
+        padding:4px;
+        border-radius:10px;
+        align-items:center;
+    }
+    input{
+        font-size:.85rem;
+        padding:10px 0;
+        border-width: 1px;
+        border-radius:10px;
+        box-shadow: inset 2px 1px 3px 3px rgb(199, 196, 196);
+    }
+    .time{
+        padding:.8rem .5rem;
+        background-color: rgba(0, 0, 0,.8);
+        color:#fff;
+        font-size:1rem;
+        margin:0 10px;
+        border-radius:10px;
+    }
+    .refresh{
+        padding:.8rem 1rem;
+        background-color: #3973cf;
+        color:#fff;
+        font-size:1rem;
+        border-radius:10px;
+    }
+    .result{
+    position: absolute;
+    z-index: 1;
+    border: none;
+    border-radius: 1rem;
+    padding: 6rem 3rem 3rem 3rem;
+    background-color: white;
+    box-shadow: 7px 4px 10px grey;
+    left: 14%;
+    right: 14%;
+    top: 20%;
+    bottom: 35%;
+ }
+ .inner-div div{
+    background-color: rgb(115, 82, 232);
+    padding:1rem 0;
+    border-radius:10px;
+    margin-top: 1rem;
+    box-shadow: 2px 3px 5px 5px rgb(212, 210, 210);
+}
+.inner-div p{
+    font-size: 1rem;
+}
+.inner-div {
+    padding: 0rem;
+    margin: auto -25%;
+}
 }
